// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept a custom name formatter 1`] = `
<Component>
  <p>
    The 'cool name' Report will be permanently deleted.
  </p>
  <p>
    <b>
      Warning: This action cannot be undone.
    </b>
  </p>
</Component>
`;

exports[`should not render anything when no entity is set 1`] = `""`;

exports[`should show the confirmation modal when entity is set 1`] = `
<Modal
  className="Deleter"
  onClose={[Function]}
  onConfirm={[Function]}
  open={true}
>
  <Component>
    Delete Report
  </Component>
  <Component>
    <p>
      The 'Doomed Report' Report will be permanently deleted.
    </p>
    <p>
      <b>
        Warning: This action cannot be undone.
      </b>
    </p>
  </Component>
  <Component>
    <ForwardRef(Button)
      className="close"
      disabled={false}
      main={true}
      onClick={[Function]}
    >
      Cancel
    </ForwardRef(Button)>
    <ForwardRef(Button)
      className="confirm"
      disabled={false}
      main={true}
      onClick={[Function]}
      warning={true}
    >
      Delete Report
    </ForwardRef(Button)>
  </Component>
</Modal>
`;

exports[`should use provided delete text for title and button 1`] = `
<Modal
  className="Deleter"
  onClose={[Function]}
  onConfirm={[Function]}
  open={true}
>
  <Component>
    Remove entity
  </Component>
  <Component>
    <p>
      The 'Doomed Report' Report will be permanently deleted.
    </p>
    <p>
      <b>
        Warning: This action cannot be undone.
      </b>
    </p>
  </Component>
  <Component>
    <ForwardRef(Button)
      className="close"
      disabled={false}
      main={true}
      onClick={[Function]}
    >
      Cancel
    </ForwardRef(Button)>
    <ForwardRef(Button)
      className="confirm"
      disabled={false}
      main={true}
      onClick={[Function]}
      warning={true}
    >
      Remove entity
    </ForwardRef(Button)>
  </Component>
</Modal>
`;
